--- a/LedDisplay.html
+++ b/LedDisplay.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title>Led House</title>
+<meta name="viewport" content="width=500">
 <meta charset="UTF-8">
 <title>Insert title here</title>
 </head>
+<style>
+.disp-frame {
+	border: 1px solid blue;
+	width:112px;
+	height: 30px;
+	background: blue;
+}
+.disp-text {
+	height: 30px;
+	color: orange;
+	white-space:nowrap;
+}
+</style>
 <body>
 
-<span style="color:yellow">빨간색 글자입니다.</span>
+<div class="disp-frame">
+	<div class="disp-text">
+		빨간색 글자입니다.빨간색 글자입니다.빨간색 글자입니다.빨간색 글자입니다.빨간색 글자입니다.빨간색 글자입니다.빨간색 글자입니다.
+	</div>
+</div>
+
+
 
 </body>
 </html>
