--- a/LedDisplay.html
+++ b/LedDisplay.html
@@ -9,14 +9,14 @@
 <style>
 .disp-frame {
 	border: 1px solid blue;
-	width:112px;
-	height: 30px;
-	background: blue;
+	width:104px;
+	height: 19px;
 }
 .disp-text {
-	height: 30px;
+	height: 100%;
 	color: orange;
 	white-space:nowrap;
+	font-size: 13px;
 }
 </style>
 <body>
