--- a/LedDisplay.html
+++ b/LedDisplay.html
@@ -15,7 +15,7 @@
 }
 .disp-text {
 	height: 100%;
-	color: orange;
+	color: white;
 	white-space:nowrap;
 	font-size: 13px;
 }
@@ -31,7 +31,7 @@
 </div>
 
 <script>
-$(".disp-text").css("color", "white");
+$(".disp-text").css("color", "red");
 </script>
 
 </body>
