--- a/LedDisplay.html
+++ b/LedDisplay.html
@@ -25,13 +25,13 @@
 <body>
 
 <div class="disp-frame">
-	<div class="disp-text">
+	<div class="disp-text" id="disp-text">
 		빨간색 글자입니다.빨간색 글자입니다.빨간색 글자입니다.빨간색 글자입니다.빨간색 글자입니다.빨간색 글자입니다.빨간색 글자입니다.
 	</div>
 </div>
 
 <script>
-$(".disp-text").css("color", "red");
+document.getElementById("disp-text").style.color = "blue"; 
 </script>
 
 </body>
