--- a/WebContent/LedDisplay.html
+++ b/WebContent/LedDisplay.html
@@ -31,7 +31,8 @@
 </div>
 
 <script>
-document.getElementById("disp-text").style.color = "blue"; 
+$("#disp-text").css("color", "yellow");
+// document.getElementById("disp-text").style.color = "blue"; 
 </script>
 
 <script>
