--- a/WebContent/LedDisplay.html
+++ b/WebContent/LedDisplay.html
@@ -26,7 +26,7 @@
 
 <div class="disp-frame">
 	<div class="disp-text" id="disp-text">
-		빨간색 글자입니다.빨간색 글자입니다.빨간색 글자입니다.빨간색 글자입니다.빨간색 글자입니다.빨간색 글자입니다.빨간색 글자입니다.
+		11빨간색 글자입니다.빨간색 글자입니다.빨간색 글자입니다.빨간색 글자입니다.빨간색 글자입니다.빨간색 글자입니다.빨간색 글자입니다.
 	</div>
 </div>
 
