--- a/WebContent/LedDisplay.html
+++ b/WebContent/LedDisplay.html
@@ -31,29 +31,24 @@
 </div>
 
 <script>
-$("#disp-text").css("color", "yellow");
+
 // document.getElementById("disp-text").style.color = "blue"; 
 </script>
 
 <script>
-/* Javascript 샘플 코드 */
-var xhr = new XMLHttpRequest();
-var url = 'http://openapi.airkorea.or.kr/openapi/services/rest/ArpltnInforInqireSvc/getMsrstnAcctoRltmMesureDnsty'; /*URL*/
-var queryParams = '?' + encodeURIComponent('ServiceKey') + '='+'CCMMqp7VkWGjXfOHliL2qYsbJbPRHed1GOQ2KEriqN4TIur8Ko8dY3bI2sMWDl9VhZhtzUR%2Fu5VUYdj36MvZGQ%3D%3D'; /*Service Key*/
-	queryParams += '&' + encodeURIComponent('numOfRows') + '=' + encodeURIComponent('1'); /**/
-	queryParams += '&' + encodeURIComponent('pageNo') + '=' + encodeURIComponent('1'); /**/
-	queryParams += '&' + encodeURIComponent('stationName') + '=' + encodeURIComponent('종로구'); /**/
-	queryParams += '&' + encodeURIComponent('dataTerm') + '=' + encodeURIComponent('DAILY'); /**/
-	queryParams += '&' + encodeURIComponent('ver') + '=' + encodeURIComponent('1.3'); /**/
-	queryParams += '&' + encodeURIComponent('_returnType') + '=' + encodeURIComponent('json');
-xhr.open('GET', url + queryParams);
-xhr.onreadystatechange = function () {
-	if (this.readyState === 4 && this.status === 200) {
-		console.log(this.responseText);
-//         alert('Status: '+this.status+'nHeaders: '+JSON.stringify(this.getAllResponseHeaders())+'nBody: '+this.responseText);
-    }
-};
-xhr.send('');
+$.ajax({
+	type: "get"
+	,url: "http://openapi.airkorea.or.kr/openapi/services/rest/ArpltnInforInqireSvc/getMsrstnAcctoRltmMesureDnsty?serviceKey=CCMMqp7VkWGjXfOHliL2qYsbJbPRHed1GOQ2KEriqN4TIur8Ko8dY3bI2sMWDl9VhZhtzUR%2Fu5VUYdj36MvZGQ%3D%3D&numOfRows=1&pageNo=1&stationName=%EC%96%91%EC%B2%9C%EA%B5%AC&dataTerm=DAILY&ver=1.3"
+	,dataType: "jsonp"
+	,async: false
+	,success: function(data) {
+		$("#disp-text").css("color", "red");
+		console.log("s", data);	
+	}, error: function(e) {
+		console.log("e", e);	
+	}
+});
+
 </script>
 
 </body>
