--- a/WebContent/LedDisplay.html
+++ b/WebContent/LedDisplay.html
@@ -38,7 +38,7 @@
 <script>
 $.ajax({
 	type: "get"
-	,url: "http://openapi.airkorea.or.kr/openapi/services/rest/ArpltnInforInqireSvc/getMsrstnAcctoRltmMesureDnsty?serviceKey=CCMMqp7VkWGjXfOHliL2qYsbJbPRHed1GOQ2KEriqN4TIur8Ko8dY3bI2sMWDl9VhZhtzUR%2Fu5VUYdj36MvZGQ%3D%3D&numOfRows=1&pageNo=1&stationName=%EC%96%91%EC%B2%9C%EA%B5%AC&dataTerm=DAILY&ver=1.3"
+	,url: "https://openapi.airkorea.or.kr/openapi/services/rest/ArpltnInforInqireSvc/getMsrstnAcctoRltmMesureDnsty?serviceKey=CCMMqp7VkWGjXfOHliL2qYsbJbPRHed1GOQ2KEriqN4TIur8Ko8dY3bI2sMWDl9VhZhtzUR%2Fu5VUYdj36MvZGQ%3D%3D&numOfRows=1&pageNo=1&stationName=%EC%96%91%EC%B2%9C%EA%B5%AC&dataTerm=DAILY&ver=1.3"
 	,dataType: "jsonp"
 	,async: false
 	,success: function(data) {
