--- a/WebContent/LedDisplay.html
+++ b/WebContent/LedDisplay.html
@@ -31,24 +31,26 @@
 </div>
 
 <script>
-
 // document.getElementById("disp-text").style.color = "blue"; 
 </script>
 
 <script>
 $.ajax({
-	type: "get"
-	,url: "http://openapi.airkorea.or.kr/openapi/services/rest/ArpltnInforInqireSvc/getMsrstnAcctoRltmMesureDnsty?serviceKey=CCMMqp7VkWGjXfOHliL2qYsbJbPRHed1GOQ2KEriqN4TIur8Ko8dY3bI2sMWDl9VhZhtzUR%2Fu5VUYdj36MvZGQ%3D%3D&numOfRows=1&pageNo=1&stationName=%EC%96%91%EC%B2%9C%EA%B5%AC&dataTerm=DAILY&ver=1.3"
-	,dataType: "json"
+	type: "post"
+	,url: "http://openapi.airkorea.or.kr/openapi/services/rest/ArpltnInforInqireSvc/getMsrstnAcctoRltmMesureDnsty"
+	,data: {"ServiceKey": "CCMMqp7VkWGjXfOHliL2qYsbJbPRHed1GOQ2KEriqN4TIur8Ko8dY3bI2sMWDl9VhZhtzUR%2Fu5VUYdj36MvZGQ%3D%3D"
+		, "numOfRows": encodeURIComponent('1'), "pageNo": encodeURIComponent('1')
+		, "stationName": encodeURIComponent('종로구'), "dataTerm": encodeURIComponent('DAILY'), "ver": encodeURIComponent('1.3'), "_returnType": encodeURIComponent('json')}
+	,dataType: "jsonp"
 	,async: false
 	,success: function(data) {
 		$("#disp-text").css("color", "red");
-		console.log("s", data);	
+		console.log(data);	
 	}, error: function(e) {
-		console.log("e", e);	
+		$("#disp-text").css("color", "blue");
+		console.log(e);	
 	}
 });
-
 </script>
 
 </body>
