--- a/WebContent/LedDisplay.html
+++ b/WebContent/LedDisplay.html
@@ -41,7 +41,7 @@ $.ajax({
 	,data: {"ServiceKey": "CCMMqp7VkWGjXfOHliL2qYsbJbPRHed1GOQ2KEriqN4TIur8Ko8dY3bI2sMWDl9VhZhtzUR%2Fu5VUYdj36MvZGQ%3D%3D"
 		, "numOfRows": encodeURIComponent('1'), "pageNo": encodeURIComponent('1')
 		, "stationName": encodeURIComponent('종로구'), "dataTerm": encodeURIComponent('DAILY'), "ver": encodeURIComponent('1.3'), "_returnType": encodeURIComponent('json')}
-	,dataType: "jsonp"
+	,dataType: "json"
 	,async: false
 	,success: function(data) {
 		$("#disp-text").css("color", "red");
